# elliptic_curve

./: CMakeLists.txt  build.sh  readme.md
include/: elliptic_curve.h
scripts/: sum_points.cpp
src/: app.cpp  ecc.cpp  main.cpp
